# STM32F072RB-DISCO

./: .mxproject  CMakeLists.txt  CMakePresets.json  Makefile  README.md  STM32F072RB-DISCO.ioc  source.txt
.readme/: config.dot  config.dot.CMSISDSP.dependers  config.dot.cmsis  config.dot.cmsis-core.dependers  config.dot.cubemx  config.dot.cubemx.dependers  config.dot.demo  config.dot.demo.dependers  config.dot.stm32f072rb_disco  config.dot.stm32f072rb_disco.dependers  config.dot.stm32f0xx_hal  config.dot.stm32f0xx_hal.dependers
Core/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
cmake/: lib_cubemx.cmake  lib_hal.cmake  lib_stm32f072rb_disco.cmake  lib_stm32f072rb_disco_RS485Checker.cmake  lib_stm32f072rb_disco_main.cmake
cubeide_RS485Checker/: .mxproject  RS485Checker.ioc
cubeide_RS485Checker/Core/Inc/: stm32f0xx_hal_conf.h  stm32f0xx_it.h
cubeide_RS485Checker/Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
cubeide_RS485Checker/RS485Checker_demo/: RS485Checker_demo.c  RS485Checker_demo.h
cubemx/: .mxproject  Makefile  STM32F072RB-DISCO.ioc
cubemx/Core/Inc/: stm32f0xx_it.h
cubemx/Core/Src/: can.c  main.c  stm32f0xx_it.c  usb.c
cubemx_RS485Checker/: RS485Checker Debug.launch
cubemx_RS485Checker/Debug/: RS485Checker.list  makefile  objects.list  sources.mk
cubemx_RS485Checker/Debug/RS485Checker_demo/: subdir.mk
cubemx_RS485Checker/Debug/demo_RS485Checker/: RS485Checker.cyclo  RS485Checker.d  RS485Checker.su  subdir.mk
cubemx_main/: STM32F072RB-DISCO.ioc
cubemx_main/Core/Inc/: stm32f0xx_it.h
cubemx_main/Core/Src/: gpio.c  tim.c
cubemx_main/demo_main/: CMakeLists.txt
demo/: CMakeLists.txt  demo.c
demo/__linker/: ac6_arm.sct  gcc_arm.ld
demo/__startup/: __vectors.c
(+64 files in other folders)
